force-app/main/default/objects/CustomLeadSettings__c/CustomLeadSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Lead Score Weights</label>
</CustomObject>