force-app/main/default/objects/CustomLeadSettings__c/fields/ContactReasonWeight__c.field-meta.xml
<CustomField>
    <fullName>ContactReasonWeight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Contact Reason Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>