force-app/main/default/objects/CustomLeadSettings__c/fields/CountryScoreWeight__c.field-meta.xml
<CustomField>
    <fullName>CountryScoreWeight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Country Score Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>