force-app/main/default/objects/CustomLeadSettings__c/fields/LeadChannelScoreWeight__c.field-meta.xml
<CustomField>
    <fullName>LeadChannelScoreWeight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Lead Channel Score Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>