force-app/main/default/objects/CustomLeadSettings__c/fields/LeadSourceScoreWeight__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceScoreWeight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Lead Source Score Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>